- Organizacion de paquetes - Conector de Mysql - Correccion de algunos nombres de variables y metodos - Cambio de campos estaticos a enumeraciones - Uso de la libreria VT100 para mostrar mensajes bonitos en consola - Generacion automatica del Jar desde IntelliJ - Multiples configuraciones del projecto IntelliJ

--- a/MailConfig.properties
+++ b/MailConfig.properties
@@ -1,12 +1,12 @@
 # Sample ResourceBundle properties file
 
-Domains.Local=laciudadx.com; 
+Domains.Local=laciudadx.com;
 
 SMTP.Connection_timeout=50000
 
 POP3.Connection_timeout=50000
 
-SMTP.port=25
+SMTP.port=26
 
 POP3.port=110
 
@@ -14,7 +14,7 @@ Database.host=localhost
 
 Database.user=root
 
-Database.password=test
+Database.password=root
 
 Database.name=mail
 
@@ -22,4 +22,4 @@ Queue.timeout=20000
 
 MailServerFilter.enabled=true
 
-Logger.File=c:\DRLogs\hoy.log
+Logger.File=hoy.log
